mgmt/infra/workload-cluster/capi-docker/out/v1_Service_capd-webhook-service_capd-system_0.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    cluster.x-k8s.io/provider: infrastructure-docker
    clusterctl.cluster.x-k8s.io: ""
  name: capd-webhook-service
  namespace: capd-system
spec:
  ports:
  - port: 443
    targetPort: webhook-server
  selector:
    cluster.x-k8s.io/provider: infrastructure-docker
