mgmt/infra/workload-cluster/capi-docker/out/admissionregistration.k8s.io_v1_MutatingWebhookConfiguration_capd-mutating-webhook-configuration__0.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: capd-system/capd-serving-cert
  creationTimestamp: null
  labels:
    cluster.x-k8s.io/provider: infrastructure-docker
    clusterctl.cluster.x-k8s.io: ""
  name: capd-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: capd-webhook-service
      namespace: capd-system
      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta1-dockercluster
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: default.dockercluster.infrastructure.cluster.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - dockerclusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: capd-webhook-service
      namespace: capd-system
      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta1-dockerclustertemplate
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: default.dockerclustertemplate.infrastructure.cluster.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - dockerclustertemplates
  sideEffects: None
